[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "activesoup"
version = "0.2.1"
description = "A pure-python headless browser"
license = "MIT"
authors = ["James Elford <james.p.elford@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/jelford/activesoup"
repository = "https://github.com/jelford/activesoup"
classifiers = [
    "Development Status :: 3 - Alpha"
]
packages = [
    { include = "activesoup", from = "src" }
]
include = [
    "README.rst"
]

[tool.poetry.dependencies]
requests = "^2.9.0"
html5lib = ">=0.9"
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^=6.2.1"
Flask = "^1.1.2"
pre-commit = "^2.9.3"
mypy = "^0.800"
black = "^20.8b1"
isort = "^5.7.0"
bump2version = "^1.0.1"
