[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "activesoup"
version = "0.3.1"
description = "A pure-python headless browser"
license = "MIT"
authors = ["James Elford <james.p.elford@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/jelford/activesoup"
repository = "https://github.com/jelford/activesoup"
classifiers = [
    "Development Status :: 3 - Alpha"
]
packages = [
    { include = "activesoup", from = "src" }
]
include = [
    "README.rst"
]

[tool.poetry.dependencies]
requests = "^2.9.0"
html5lib = ">=0.9"
python = "^3.6.7,<4.0.0"
typing_extensions = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^=6.2.1"
Flask = "^1.1.2"
pre-commit = "^2.9.3"
mypy = "^0.960"
black = "^22.3"
typed-ast = "^1.5"
isort = "^5.10.0"
bump2version = "^1.0.1"
requests-mock = "^1.9.3"
Sphinx = "^5.0"
sphinx-rtd-theme = "^0.5.2"
types-requests = "^2.27"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"

[tool.mypy]
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "html5lib",
]
ignore_missing_imports = true
